# ChangeLog for app-cdr/cdrtools
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.201 2008/05/16 02:32:06 beandog Exp $

*cdrtools-2.01.01_alpha39 (16 May 2008)

  16 May 2008; Steve Dibb <beandog@gentoo.org>
  +cdrtools-2.01.01_alpha39.ebuild:
  Version bump, bug 220327

*cdrtools-2.01.01_alpha38 (18 Apr 2008)

  18 Apr 2008; Steve Dibb <beandog@gentoo.org>
  +cdrtools-2.01.01_alpha38.ebuild:
  Version bump, bug 213122

  27 Jan 2008; Lars Weiler <pylon@gentoo.org>
  -cdrtools-2.01.01_alpha25.ebuild:
  Cleanup.

*cdrtools-2.01.01_alpha37 (27 Jan 2008)

  27 Jan 2008; Lars Weiler <pylon@gentoo.org>
  -cdrtools-2.01.01_alpha36.ebuild, +cdrtools-2.01.01_alpha37.ebuild:
  Version bump; bug #205794.

  25 Jan 2008; Fabian Groffen <grobian@gentoo.org> cdrtools-2.01-r1.ebuild,
  cdrtools-2.01.01_alpha25.ebuild, cdrtools-2.01.01_alpha34.ebuild,
  cdrtools-2.01.01_alpha36.ebuild, cdrtools-2.01.01_alpha36-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  11 Jan 2008; Mike Frysinger <vapier@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild, cdrtools-2.01.01_alpha36.ebuild,
  cdrtools-2.01.01_alpha36-r1.ebuild:
  Cleanup old rules, add in s390x, and make sure we catch future additions
  automatically.

*cdrtools-2.01.01_alpha36-r1 (05 Jan 2008)

  05 Jan 2008; Steve Dibb <beandog@gentoo.org>
  +cdrtools-2.01.01_alpha36-r1.ebuild:
  Add dependency for sys-apps/acl, bug 198779

  14 Nov 2007; Jeroen Roovers <jer@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild:
  Stable for HPPA (bug #197665).

*cdrtools-2.01.01_alpha36 (11 Nov 2007)

  11 Nov 2007; Lars Weiler <pylon@gentoo.org>
  -files/cdrtools-2.01.01a03-rezero.patch,
  -files/cdrtools-2.01a27-writemode.patch, -cdrtools-2.01.01_alpha32.ebuild,
  +cdrtools-2.01.01_alpha36.ebuild:
  Version bump; bug #193544.  Cleaned out old version.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org>
  cdrtools-2.01.01_alpha34.ebuild: