@@ -1,6 +1,16 @@
 # ChangeLog for app-cdr/cdrtools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.201 2008/05/16 02:32:06 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.203 2008/06/06 11:27:41 opfer Exp $
+
+  06 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
+  -cdrtools-2.01-r1.ebuild:
+  clean up
+
+*cdrtools-2.01.01_alpha40 (06 Jun 2008)
+
+  06 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
+  +cdrtools-2.01.01_alpha40.ebuild:
+  version bump, fixing bug 224449
 
 *cdrtools-2.01.01_alpha39 (16 May 2008)
 
